objects/Income_Card_Payment_History__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Authorisation_Code__c</fullName>
        <label>Authorisation Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Amount__c</fullName>
        <formula>IF( AND( OR(ISPICKVAL(Transaction_Type__c, &quot;Sale&quot;), ISPICKVAL(Transaction_Type__c, &quot;Authorised&quot;) ) , Payment_Status__c = &quot;Successful&quot; ), Amount__c , if ( AND(ISPICKVAL(Transaction_Type__c, &quot;Deferred Released&quot;), Payment_Status__c = &quot;Successful&quot;), Amount__c , if (AND (ISPICKVAL(Transaction_Type__c, &quot;Refund&quot;) || ISPICKVAL(Transaction_Type__c, &quot;Void&quot;), Payment_Status__c = &quot;Successful&quot; ), -Amount__c ,0) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Payment_Description__c</fullName>
        <label>Customer Payment Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Payment_Reference__c</fullName>
        <label>Customer Payment Reference</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Income_Card_Payment__c</fullName>
        <label>Income Card Payment</label>
        <referenceTo>Income_Card_Payment__c</referenceTo>
        <relationshipName>Income_Card_Payment_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Internal_Payment_Description__c</fullName>
        <label>Internal Payment Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order_ID__c</fullName>
        <label>Order ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Reference__c</fullName>
        <label>Payment Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Schedule</label>
        <referenceTo>Payment_Schedule__c</referenceTo>
        <relationshipName>Income_Card_Payment_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Status_Details__c</fullName>
        <label>Payment Status Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund_Reason__c</fullName>
        <label>Reason</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SagePay_Vendor_Tx_Code__c</fullName>
        <label>SagePay Vendor Tx Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Key__c</fullName>
        <label>Security Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Surcharge_Amount__c</fullName>
        <label>Surcharge Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_ID__c</fullName>
        <label>Transaction ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sale</fullName>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Deferred Released</fullName>
                </value>
                <value>
                    <fullName>Deferred Aborted</fullName>
                </value>
                <value>
                    <fullName>Authenticate</fullName>
                </value>
                <value>
                    <fullName>Authorised</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Card Payment History</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Income Card Payment History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Card Payment History</pluralLabel>
    <recordTypes>
        <fullName>Bank_Transfer</fullName>
        <active>true</active>
        <description>Bank Transfer Payments</description>
        <label>Bank Transfer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Card_Payment</fullName>
        <active>true</active>
        <label>Card Payment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cash</fullName>
        <active>true</active>
        <label>Cash</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cheque</fullName>
        <active>true</active>
        <label>Cheque</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>